--- a/index.html
+++ b/index.html
@@ -8,12 +8,64 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Nav Bar -->
+    <section id="nav-bar" class="container">
+        <header class="nav-bar">
+            <div class="brand"><a href="#hero"><p>Bryan's Webpage</p></a></div>
+            <div class="nav-list">
+                <div class="hamburger">
+                    <div class="bar"></div>
+                </div>
+                <ul>
+                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#footer">Contact Me</a></li>
+                </ul>
+            </div>
+        </header>
+    </section>
+    <!-- End Nav Bar -->
+
     <!-- Hero Section -->
-    <section id="hero">
-        <div class="hero container">
-            <h1 class="animation">Hello, My Name is Bryan</h1>
-            <a href="#" type="button" class="cta">Portfolio</a>
+    <section id="hero" class="hero container">
+        <div class="hero-info">
+            <h1 class="hero-info-heading">
+                <div class="text-1">Hello, my name is <span></span></div>
+                <div class="text-2">Bryan Yoo <span></span></div>
+            </h1>
+            <p class="hero-info-subheading"> I am a 
+                <span class="txt-type" data-wait="1500" data-words='["Developer", "Web Designer", "Creator"]'></span>
+            </p>
+            <a href="#" type="button" class="hero-info-button">Portfolio</a>
+        </div>
+        <div class="hero-img">
+            <img src="./images/young-bryan.jpg" alt="">
         </div>
     </section>
+    <!-- End Hero Section -->
+    <!-- About Section -->
+    <section id="about" class="about container">
+        <div class="about-info">
+            <h1 class="about-info-heading">About Me</h1>
+            <p class="about-info-description">I am a highschooler who is eager to learn more code</p>
+            <a href="#" type="button" class="about-info-button">Download Resume</a>
+        </div>
+        <div class="about-img">
+            <div class="about-img-wrapper">
+                <img src="./images/young-bryan.jpg" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- End About Section -->
+
+    <!-- Footer section -->
+    <footer id="footer" class="footer container">
+        <div class="footer-contact">
+            <h1 class="footer-contact-heading">Contact with Me</h1>
+            <p class="footer-contact-info">Email: bryanyoo5433@gmail.com</p>
+            <p class="footer-contact-info">Mobile: (858)-945-5926</p>
+        </div>
+    </footer>
+    <!-- End  Footer section -->
+    <script src="main.js"></script>
 </body>
 </html>
