--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
     <section id="hero" class="hero container">
         <div class="hero-info">
             <h1 class="hero-info-heading">
-                <div class="text-1">Hello, my name is <span></span></div>
-                <div class="text-2">Bryan Yoo <span></span></div>
+                <div class="text-1">Hello, my name is</div>
+                <div class="text-2">Bryan Yoo </div>
             </h1>
-            <p class="hero-info-subheading"> I am a 
+            <p class="hero-info-subheading"> I am a </p>
+            <p class="hero-info-animationheading"> 
                 <span class="txt-type" data-wait="1500" data-words='["Developer", "Web Designer", "Creator"]'></span>
             </p>
             <a href="#" type="button" class="hero-info-button">Portfolio</a>
@@ -47,7 +48,7 @@
         <div class="about-info">
             <h1 class="about-info-heading">About Me</h1>
             <p class="about-info-description">I am a highschooler who is eager to learn more code</p>
-            <a href="#" type="button" class="about-info-button">Download Resume</a>
+            <a target="_blank" href="https://docs.google.com/document/d/1UcwUZZslb3MdjkwLz1bJeQRgm5J4HjzwGHbMRV7BvRg/edit?usp=sharing" type="button" class="about-info-button">Download Resume</a>
         </div>
         <div class="about-img">
             <div class="about-img-wrapper">
