--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p class="hero-info-animationheading"> 
                 <span class="txt-type" data-wait="1500" data-words='["Developer", "Web Designer", "Creator"]'></span>
             </p>
-            <a href="#" type="button" class="hero-info-button">Portfolio</a>
+<!--             <a href="#" type="button" class="hero-info-button">Portfolio</a> -->
         </div>
         <div class="hero-img">
             <img src="./images/young-bryan.jpg" alt="">
@@ -47,7 +47,7 @@
     <section id="about" class="about container">
         <div class="about-info">
             <h1 class="about-info-heading">About Me</h1>
-            <p class="about-info-description">I am a highschooler who is eager to learn more code</p>
+            <p class="about-info-description">I am a highschooler currently attending Canyon Crest Academy. I love to code and design websites because it is very fun and I get to be creative.</p>
             <a target="_blank" href="https://docs.google.com/document/d/1UcwUZZslb3MdjkwLz1bJeQRgm5J4HjzwGHbMRV7BvRg/edit?usp=sharing" type="button" class="about-info-button">Download Resume</a>
         </div>
         <div class="about-img">
